fix(310): make node enhancement title wrap

--- a/packages/webapp/src/webview/ui/components/GuidedAnswerNode/GuidedAnswerNode.scss
+++ b/packages/webapp/src/webview/ui/components/GuidedAnswerNode/GuidedAnswerNode.scss
@@ -79,7 +79,6 @@
                 font-size: 14px;
                 font-weight: 700;
                 line-height: 18px;
-                white-space: nowrap;
                 display: inline-block;
             }
         }
